implementacao consulta por unidade
